First commit from template

--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -1,12 +1,12 @@
 ---
 type: page
-title: Photos
-date: 2021-03-18
+title: Inspiration
+date: 2024-01-01
 ---
 
-# Photos
+# Inspiration
 
-Here's some of my photography.
+A collection of all sort of things that inspire me, ranging from books, movies, music, games, and more. It's less about the artifact, and more about what it represents and the story behind it.
 
 import Image from 'next/image'
 
