--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,17 +4,14 @@ title: About
 date: 2021-03-19
 ---
 
-# Your Name
+## About Me
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
+I was born and raised in Rome, but now live in the Bay Area. I'm a Partner at [Decibel](https://decibel.vc), where I lead Seed and Series A rounds in AI, infrastructure software, security, and dev tools. I'm also the CTO of the firm, leading the development of our internal software platform that we use for programmatic sourcing, tracking projects, etc.
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
+This blog has a lot of my writing; I also co-host the [Latent Space podcast](https://latent.space/), the largest AI Engineers community, with my friend swyx. In 2023 we had well over a million views.
 
-[**Deploy your own**](https://vercel.com/new/clone?demo-title=Portfolio+Starter+Kit&demo-description=Easily+create+a+portfolio+with+Next.js+and+Markdown.&demo-url=https%3A%2F%2Fdemo.vercel.blog%2F&demo-image=%2F%2Fimages.ctfassets.net%2Fe5382hct74si%2F2aC4eHLrOKmT4fnLfoNGK2%2F14b1e6bbe598ec023ffe85001d31e634%2FCleanShot_2022-04-11_at_23.12.01.png&project-name=Portfolio+Starter+Kit&repository-name=portfolio-starter-kit&repository-url=https%3A%2F%2Fgithub.com%2Fvercel%2Fnextjs-portfolio-starter&from=templates&skippable-integrations=1&teamCreateStatus=hidden) in a few minutes.
+In my spare time, I play soccer, Magic The Gathering, as well as some FPS games (mostly COD / CS). Ping me about that any time! :)
 
----
+## Contact
 
-- Twitter [@yourname](https://twitter.com/yourname)
-- GitHub [@yourname](https://github.com/yourname)
-- Instagram [@yourname](https://instagram.com/yourname)
-- Email your@name.com
+alessio[at]decibel.vc or [@FanaHOVA](https://twitter.com/fanahova)
