Update blog post title

--- a/pages/posts/maximum-enterprise-utilization.mdx
+++ b/pages/posts/maximum-enterprise-utilization.mdx
@@ -1,5 +1,5 @@
 ---
-title: AI as an enabler for "MEU" - Maximum Enterprise Utilization  
+title: Enabling "Maximum Enterprise Utilization" with AI  
 date: 2024-01-03
 description: A mental model to navigate the impact and value of AI in the enterprise.
 ---
