--- a/pages/posts/maximum-enterprise-utilization.mdx
+++ b/pages/posts/maximum-enterprise-utilization.mdx
@@ -42,7 +42,7 @@ $$
 
 $$
 
-AI is the first technology in decades that can **increase Total Productivity without requiring more work hours by humans**. I'm guessin the average MEU for a software company isn't much higher than 20-40%; if you lead an engineering team, a rough way to calculate it is your quarterly tickets throughput as a percentage of your whole backlog. 
+AI is the first technology in decades that can **increase Total Productivity without requiring more work hours by humans**. I'm guessing the average MEU for a software company isn't much higher than 20-40%; if you lead an engineering team, a rough way to calculate it is your quarterly tickets throughput as a percentage of your whole backlog. 
 
 It's been really hard to improve on the MEU number historically:
 - Adding more employees and contracts can lower productivity due to the communication complexity (see [Metcalfe's Law](https://en.wikipedia.org/wiki/Metcalfe%27s_law)), and it's also very expensive making it unfeasible for many
